media/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: media
spec:
  selector:
    matchLabels:
      app: kavita
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kavita
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: ghcr.io/kareadita/kavita:latest
          name: kavita
          ports:
            - containerPort: 5000
              name: kavita
          volumeMounts:
            - mountPath: /nextcloud
              name: nextcloud
              subPath: "data/sean/files/Kavita"
              readOnly: true
            - mountPath: /kavita/config
              name: config
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
        - name: config
          persistentVolumeClaim:
            claimName: kavita
