media/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: media
  labels:
    app: kavita
spec:
  ports:
    - port: 5000
      name: kavita
  selector:
    app: kavita
